fix: footer réalignement marges

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
     display: flex;
     justify-content: center;
     margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .main-container {
@@ -296,7 +297,7 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .hebergements-cards img {
     width: 100%;
-    height: 55%;
+    height: 115px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
@@ -399,7 +400,7 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 .activites-cards img {
-    height: 500px;
+    height: 375px;
     width: 100%;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -407,8 +408,9 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .activites-cards .card-content {
     padding-left: 15px;
+    height: 60px;
     display: flex;
-    justify-content: space-between;
+    align-items: center;
     box-sizing: border-box;
 }
 
@@ -417,7 +419,7 @@ input[type="search"]::-webkit-search-cancel-button {
 
 footer {
     background-color: #F2F2F2;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
 }
 
 .footer-list {
@@ -429,11 +431,13 @@ footer {
 
 footer ul {
     list-style: none;
-    padding-left: 0px;
+    padding-left: 20px;
 }
 
 footer li {
-    padding-bottom: 5px;
+    padding-bottom: 15px;
+    font-weight: 300;
+    font-size: medium;
 }
 
 footer strong {
